--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,10 @@ version: '3'
  
 services:
   db:
-    image: mysql:5.7
+    image: mysql:8.0.23
     container_name: db
+    command: --default-authentication-plugin=mysql_native_password
+    restart: always
     environment:
       - "MYSQL_ROOT_PASSWORD=geheim"
       - "MYSQL_DATABASE=psvdb"
